--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 							<li><a href="#hero" class="hidden">Top</a></li>
 
 							<li><a href="#about">A Propos</a></li>
-							<!--<li><a href="#how-it-works">Planning</a></li>
 							<li><a href="#keynotes">Keynotes</a></li>
+							<!--<li><a href="#how-it-works">Planning</a></li>
 							<li><a href="#coachs">Coachs &amp; Jury</a>
 							<li><a href="#prizes">Prix</a>
 							<li><a href="#winners">Résultats</a>-->
@@ -522,7 +522,7 @@
 
 			</section>
 
-			<!--<section id="keynotes" class="section section-dark">
+			<section id="keynotes" class="section section-dark">
 				
 				<div class="section-background">
 					<div class="section-background-image parallax" data-stellar-ratio="0.4">
@@ -537,79 +537,67 @@
 
 					<div class="row">
 						<div class="about-text col-md-4">
-							<h3 style="font-size: 22px; font-weight: bold;">Samedi 14 octobre de 11h à 12h</h3>
-							<img src="images/contents/keynote-industrie4-0.jpg" style="width: 100%;" alt="Keynote de Jean-Claude Noben, Directeur Régional Wallonie Sirris" title="Keynote de Jean-Claude Noben, Directeur Régional Wallonie Sirris" />
+							<h3 style="font-size: 20px; font-weight: bold;">Samedi 13 octobre de 11h à 12h</h3>
+							<img src="images/contents/keynote-design.jpg" style="width: 100%;" alt="Design et Industrie, un mariage possible" title="Design et Industrie, un mariage possible" />
 
-							<h3>Made Different : préparer les entreprises à l'industrie 4.0</h3>
+							<h3>Design et Industrie, un mariage possible</h3>
 							
 							<div class="lead">
-								<p style="font-size: 18px;">Fort de ses 30 ans d'expérience dans l'industrie en tant que chef de projet, superviseur pour l'industrialisation et directeur technique pour une PME, Jean-Claude a rejoint Sirris en 2006. L’une des missions confiées à M. Noben pour ce centre de recherche consiste à préparer les entreprises à l’industrie 4.0, via le programme Made Different qu'il nous présentera. Made Different Digital Wallonia est un programme de sensibilisation et d’accompagnement des entreprises industrielles wallonnes dans leur transformation à l’industrie 4.0.</p>-->
-								<!--<div class="read_more">
-									<a href="javascript:void(0)" class="read_more_button">En savoir plus</a>
-									<div class="read_more_content">
-										<p>À travers ses expériences, Jean-Daniel Weisz, associé du Cabinet KOHLER C&amp;C propose des clés pour comprendre comment l’État et les industries allemandes s'adaptent à la numérisation des processus industriels. En constatant que le changement fait aujourd'hui partie intégrante de la dynamique d'entreprise, celui-ci n'est plus perçu comme une phase d'incertitude, mais est conçu comme un avantage compétitif qui crée de la valeur. En France sommes-nous prêts à de telles modifications ? Pouvons-nous saisir cette opportunité de différenciation conjointement avec nos voisins d'Outre-Rhin ?<br>Le cabinet Kohler C&amp;C, experts en stratégie de transformation et en développement des organisations a publié en mars 2016 l’ouvrage « Industrie 4.0 – Les défis de la transformation numérique du modèle industriel allemand » à la documentation Française.</p>
-									</div>
-								</div>-->
-							<!--</div>
-							<p style="margin-bottom: 0;">Présentée par Jean-Claude Noben, Directeur Régional Wallonie Sirris</p><br>
-							<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://adira.com/" target="_blank"><img style="height: 35px;" src="images/contents/adira.png" alt="Adira"></a></p>
+								<p style="font-size: 18px;">Bien souvent, les designers sont perçus comme des « artistes » et à l’inverse les ingénieurs/techniciens peuvent être vus comme n’ayant aucune créativité… L’idée est de casser cette vision et montrer que notamment grâce à des méthodologies empruntées aux designers, le design et l’industrie peuvent parfaitement collaborer et travailler à la résolution de problématiques complexes.</p>
+							</div>
+							<p style="margin-bottom: 0;">Keynote de Teddy Wilhelm, Ingénieur expert en design thinking chez <a href="https://www.impact-positif.fr/" target="_blank">Impact Positif</a></p><br>
+							<p>Organisée avec &nsbp;<a href="https://www.creaccro.eu/" target="_blank"><img style="height: 35px;" src="images/contents/creaccro-h.jpg" alt="Creaccro"></a></p>
 
-							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-1-hic-jean-claude-noben-directeur-regional-wallonie-sirris-38448525575" target="_blank" class="btn btn-primary">J'y vais !</a></div>
+							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-1-hic-design-et-industrie-un-mariage-impossible-50949601630" target="_blank" class="btn btn-primary">J'y vais !</a></div>
 						</div>
 
 						<div class="about-text col-md-4">
-							<h3 style="font-size: 22px; font-weight: bold;">Samedi 14 octobre de 15h à 16h</h3>
+							<h3 style="font-size: 20px; font-weight: bold;">Samedi 13 octobre de 14h30 à 15h30</h3>
 
-							<img src="images/contents/keynote-blockchain.jpg" style="width: 100%;" alt="La blockchain un véritable levier pour l’industrie" title="La blockchain un véritable levier pour l’industrie" />
+							<img src="images/contents/keynote-organisationsexponentielles.jpg" style="width: 100%;" alt="Principes des organisations exponentielles" title="Principes des organisations exponentielles" />
 
-							<h3>La blockchain, un véritable levier pour l’industrie ?</h3>
+							<h3>Principes des organisations exponentielles</h3>
 
 							<div class="lead">
-								<p style="font-size: 18px;">La technologie blockchain* offre de nombreuses opportunités pour le monde de l'industrie. En permettant l’automatisation distribuée des transactions, la blockchain change la façon de "faire des affaires", les relations fournisseurs – clients- sous-traitants, en les centrant sur la confiance. Les premières applications, crypto monnaies ou assurances, font aujourd’hui place à des expérimentations dans bien d’autres domaines comme la distribution d’énergie ou la supply chain. Quels sont ces nouveaux champs d’investigation ? Comment être confiant dans cette nouvelle Technologie ?
-								</p>-->
-								<!--<div class="read_more">
-									<a href="javascript:void(0)" class="read_more_button">En savoir plus</a>
-									<div class="read_more_content">
-										<p>Après avoir occupé plusieurs postes aux diverses responsabilités dans de grandes entreprises et avoir créer sa propre entreprise, il entre en 2014 à l'Inria, établissement de recherche dédié aux sciences du numérique. Il y exercera en tant que chargé des partenariats et de la propriété intellectuelle jusqu'à récemment. Suite à la campagne « Horizon Start-up » de 2015, organisée par l'Inria et qui avait pour objectif d'attirer l'attention des chercheurs vers la création d'entreprise, Arnaud Laprévote décide lui aussi de se lancer dans l'aventure entrepreneuriale en créant début 2016, Lybero.net. Ce système innovant qui permet de protéger des données par une technologie de chiffrement contenant une clé de recouvrement à seuil, sonnera peut-être le glas de la cybercriminalité.</p>
-									</div>
-								</div>-->
-							<!--</div>
+								<p style="font-size: 18px;">Certaines entreprises vont aller dix fois plus vite, être dix fois plus performantes, ou dix fois moins chères, que les autres. Pourquoi ?<br><br>Ces organisations exponentielles se caractérisent par leur agilité et flexibilité : des effectifs flexibles (sous-traitants et salariés), des communautés de partenaires, des systèmes d’algorithmes, des plateformes et actifs loués plutôt que propriétaires. Ce sont des organisations qui favorisent l’autonomie, l’expérimentation, et qui savent créer les interfaces avec leur écosystème.<br><br>Vous en rêvez ? Faut-il "tout pêter" pour y arriver ou peut transformer l'entreprise quelque soit sa taille ou son âge ?
+								</p>
+							</div>
 							<p>
-								Keynote de Pierre Banzet et Franck Augustin de la société Transchain<br>
-							</p>-->
+								Keynote de Yan-Erik Decorde, Ambassadeur <a href="http://exolever.com" target="_blank">Exolever.com</a><br>
+							</p>
 							<!--<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/" target="_blank"><img style="height: 33px;" src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a></p>-->
 
-							<!--<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-keynote-hic-au-dela-de-la-speculation-la-blockchain-un-veritable-levier-pour-lindustrie-38491329603" target="_blank" class="btn btn-primary">J'y vais !</a></div>
+							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-2-hic-les-principes-des-organisations-exponentielles-50950018878" target="_blank" class="btn btn-primary">J'y vais !</a></div>
 						</div>
 
 						<div class="about-text col-md-4">
-							<h3 style="font-size: 22px; font-weight: bold;">Samedi 14 octobre de 17h à 18h</h3>
+							<h3 style="font-size: 20px; font-weight: bold;">Samedi 13 octobre de 16h à 17h</h3>
 
-							<img src="images/contents/keynote-agilite.jpg" style="width: 100%;" alt="L'agilité dans l’innovation managériale" title="L'agilité dans l’innovation managériale" />
+							<img src="images/contents/keynote-ia.jpg" style="width: 100%;" alt="L'agilité dans l’innovation managériale" title="L'agilité dans l’innovation managériale" />
 
-							<h3>L'agilité dans l’innovation managériale</h3>
+							<h3>L'IA dans l'Industrie 4.0</h3>
 
 							<div class="lead">
-								<p style="font-size: 18px;">De grands défis attendent l’entreprise 4.0. Elle devra être connectée et agile ! Scandé comme un dogme, dans cette interpellation, chacun y voit midi à sa porte et se lance dans le changement avec enthousiasme ou sous la contrainte. Les PME sont-elles prêtes à ce changement ? Croient-elles suffisamment en leur puissance inventive pour ne pas subir ? Sommes-nous dans une nouvelle crise de la modernité ? ou dans une Révolution collaborative ?</p>
+								<p style="font-size: 18px;">Venez découvrir l'IA et les opportunités qu'elle offre à l'Industrie. Patrick Meyer, IA Technical Leader pour le Groupe Sopra Steria, introduira rapidement ce qu'inclus l'IA dans son périmètre et comment la DataScience s'y positionne. Il ira ensuite rapidement sur des éléments concrets, au travers de retours d'expériences, sur les usages (avec un focus particulier sur les assistants virtuels). Enfin il vous donnera des clés pour pouvoir démarrer des projets d'IA.</p>
 								<div class="read_more">
 									<a href="javascript:void(0)" class="read_more_button">En savoir plus</a>
 									<div class="read_more_content">
-										<p>Depuis 2009, Jean-Sébastien Desjonqueres accompagne des projets en conduite de changement des organisations, à la fois auprès d’acteurs privés et d¹institutions à partir de Luxembourg où il réside.</p>
+										<p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions, Patrick Meyer a récemment été récompensé d'un Award par IBM pour son travail autour de Watson.</p>
 									</div>
 								</div>
 							</div>
 							<p>
-								Présentée par Jean-Sébastien Desjonqueres<br>
-							</p><br>
-							<p>Conférence suivie d'une collation, organisée en partenariat avec &nbsp;<a href="http://alsace.cci.fr/" target="_blank"><img style="height: 33px;" src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a></p>
-							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-2-hic-lagilite-dans-linnovation-manageriale-38494510116" target="_blank" class="btn btn-primary">J'y vais !</a></div>
+								Keynote de Patrick Meyer, IA Technical Leader pour le Groupe Sopra Steria<br>
+							</p>
+							<p><a href="https://www.soprasteria.com/" target="_blank"><img style="height: 33px;" src="images/contents/sopra.jpg" alt="Sopra Steria"></a></p>
+							<div style="margin-bottom: 50px; margin-top: 0px;"><a href="https://www.eventbrite.fr/e/billets-conference-3-hic-lia-dans-lindustrie-40-51007353367" target="_blank" class="btn btn-primary">J'y vais !</a></div>
 						</div>
 
 					</div>
 
 				</div>
 
-			</section>-->
+			</section>
 
 			<!-- TEAM
 			================================= -->
