--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 								<p style="font-size: 18px;">Bien souvent, les designers sont perçus comme des « artistes » et à l’inverse les ingénieurs/techniciens peuvent être vus comme n’ayant aucune créativité… L’idée est de casser cette vision et montrer que notamment grâce à des méthodologies empruntées aux designers, le design et l’industrie peuvent parfaitement collaborer et travailler à la résolution de problématiques complexes.</p>
 							</div>
 							<p style="margin-bottom: 0;">Keynote de Teddy Wilhelm, Ingénieur expert en design thinking chez <a href="https://www.impact-positif.fr/" target="_blank">Impact Positif</a></p><br>
-							<p>Organisée avec &nsbp;<a href="https://www.creaccro.eu/" target="_blank"><img style="height: 35px;" src="images/contents/creaccro-h.jpg" alt="Creaccro"></a></p>
+							<p>Organisée avec &nbsp;<a href="https://www.creaccro.eu/" target="_blank"><img style="height: 35px;" src="images/contents/creaccro-h.jpg" alt="Creaccro"></a></p>
 
 							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-1-hic-design-et-industrie-un-mariage-impossible-50949601630" target="_blank" class="btn btn-primary">J'y vais !</a></div>
 						</div>
