--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 										<a class="btn btn-default disabled" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-webinar1-hic-bonnes-pratiques-pour-deployer-une-appli-en-toute-conformite-50264608798" target="_blank">02/10 à 12h<br><span> Pourquoi sécuriser mon projet d'Industrie 4.0</span></a>
 									</div>
 									<div class="col-md-3">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-webinar3-hic-les-technologies-de-transmission-de-donnees-ex-de-lora-50345866843" target="_blank">04/10 à 12h<br><span>Transmission de données sur le réseau LoRa</span></a>
+										<a class="btn btn-default disabled" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-webinar3-hic-les-technologies-de-transmission-de-donnees-ex-de-lora-50345866843" target="_blank">04/10 à 12h<br><span>Transmission de données sur le réseau LoRa</span></a>
 									</div>
 									<div class="col-md-3">
 										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-webinar4-hic-la-blockchain-a-quoi-sert-elle-vraiment-50345989209" target="_blank">11/10 à 12h<br><span>A quoi sert vraiment la Blockchain ?</span></a>
