hide 2017 button in nav

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<!-- HEADER ACTION BUTTON -->
 							<li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-primary">S'inscrire</a></li>
 							<li class="header-action-button"><a target="_blank" href="http://hic2018.sparkboard.com" class="btn btn-primary">Les défis</a></li>
-							<li class="header-action-button"><a target="_blank" href="http://2017.hackingindustry.camp" class="btn btn-primary">Édition 2017</a></li>
+							<!--<li class="header-action-button"><a target="_blank" href="http://2017.hackingindustry.camp" class="btn btn-primary">Édition 2017</a></li>-->
 							<a href="#" class="dropdown-toggle external language-choice" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-globe" style="font-size: 22px; vertical-align: -3px;"></i>&nbsp; FR <span class="caret"></span></a>
 							<ul class="dropdown-menu dropdown-language" role="menu">
 								<li><a href="/en/">EN</a></li>
