--- a/en/index.html
+++ b/en/index.html
@@ -84,14 +84,14 @@
 							<li><a href="#keynotes">Keynotes</a></li>
 							<li><a href="#coachs">Coaches &amp; Jury</a>
 							<li><a href="#prizes">Prizes</a>
-							<li><a href="#winners">Results</a>
-							<li><a href="#sponsors">Sponsors</a></li>-->
-							<!--<li><a href="#faq">FAQ</a></li>-->
+							<li><a href="#winners">Results</a>-->
+							<li><a href="#sponsors">Sponsors</a></li>
+							<li><a href="#faq">FAQ</a></li>
 
 							<!-- HEADER ACTION BUTTON -->
 							<li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-primary">Registration</a></li>
 							<li class="header-action-button"><a target="_blank" href="http://hic2018.sparkboard.com" class="btn btn-primary">Challenges</a></li>
-							<li class="header-action-button"><a target="_blank" href="http://2017.hackingindustry.camp" class="btn btn-primary">2017 edition</a></li>
+							<!--<li class="header-action-button"><a target="_blank" href="http://2017.hackingindustry.camp" class="btn btn-primary">2017 edition</a></li>-->
 							<a href="#" class="dropdown-toggle external language-choice" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-globe" style="font-size: 22px; vertical-align: -3px;"></i>&nbsp; EN <span class="caret"></span></a>
 							<ul class="dropdown-menu dropdown-language" role="menu">
 								<li><a href="/">FR</a></li>
@@ -1203,12 +1203,12 @@
 
 			<!-- SPONSORS
 			================================= -->
-			<!--<section id="sponsors" class="section-dark section" style="padding-bottom: 30px; padding-top: 30px;">
+			<section id="sponsors" class="section-dark section" style="padding-bottom: 30px; padding-top: 30px;">
 
 				<div class="section-background">
 
 					<div class="section-background-image parallax" data-stellar-ratio="0.4">
-						<img src="/images/backgrounds/arduino.jpg" style="opacity: 0.20;">
+						<img src="images/backgrounds/arduino.jpg" style="opacity: 0.20;">
 					</div>
 
 				</div>
@@ -1218,73 +1218,80 @@
 					<h2 class="section-heading text-center hidden">Partenaires et sponsors</h2>
 
 					<div class="sponsors-row" data-animation="bounceIn">
-						<p style="font-size: 17px;">Dans le cadre de son soutien au Hacking Industry Camp, ÉS est partie prenante de l'organisation de l'évènement.</p><br>
-						<a href="http://www.es-groupe.fr/" target="_blank"><img src="/images/contents/logo ES2.jpg" alt="ES"></a>
+						<p style="font-size: 17px;">The group ÉS co-organizes the Hacking Industry Camp</p><br>
+						<a href="http://www.es-groupe.fr/" target="_blank"><img src="images/contents/logo ES2.jpg" alt="ES"></a>
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
 						<h3 style="font-size: 17px;">Gold Sponsors</h3><br>
-						<a href="http://www.socomec.fr/Accueil_fr.html" target="_blank"><img src="/images/contents/socomec.png" alt="Socomec France"></a>
-						<a href="http://www.strasbourg.port.fr/" target="_blank"><img src="/images/contents/pas.png" alt="Port Autonome de Strasbourg"></a>
-						<a href="http://strasbourg.eu/" target="_blank"><img src="/images/contents/banner-stras.png" alt="Strasbourg.eu"></a>
+						<a href="http://www.socomec.fr/Accueil_fr.html" target="_blank"><img src="images/contents/socomec.png" alt="Socomec France"></a>
+						<a href="http://www.strasbourg.port.fr/" target="_blank"><img src="images/contents/pas.png" alt="Port Autonome de Strasbourg"></a>
+						<a href="http://strasbourg.eu/" target="_blank"><img src="images/contents/banner-stras.png" alt="Strasbourg.eu"></a>
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
 						<h3 style="font-size: 17px;">Silver Sponsors</h3><br>
-						<a href="http://www.caisse-epargne.fr/" target="_blank"><img src="/images/contents/caisse-epargne.jpg" alt="Caisse d'Epargne Alsace"></a>						
-						<a href="http://www.hagergroup.com/" target="_blank"><img src="/images/contents/hager-group.png" alt="Hager"></a>				
-						<a href="http://www.rhenatic.eu/" target="_blank"><img src="/images/contents/rhenatic.png" alt="Rhénatic" style="width: 180px;"></a>
-						<a href="http://www.strataggem.com/" target="_blank" style="background: white; padding: 15px;"><img src="/images/contents/strataggem.png" alt="Strataggem"></a>
-						<a href="http://www.insa-strasbourg.fr/" target="_blank"><img src="/images/contents/insa.png" alt="INSA Strasbourg"></a>
-						<a href="http://www.alsacechampagneardennelorraine.eu/" target="_blank"><img src="/images/contents/regiongrandest.png" alt="Région Grand Est"></a>
-						<a href="https://www.interregeurope.eu/" target="_blank"><img src="/images/contents/interreg.jpg" alt="Interreg Europe"></a>
+						<a href="http://www.caisse-epargne.fr/" target="_blank"><img src="images/contents/caisse-epargne.jpg" alt="Caisse d'Epargne Alsace"></a>						
+						<a href="http://www.hagergroup.com/" target="_blank"><img src="images/contents/hager-group.png" alt="Hager"></a>				
+						<a href="http://www.rhenatic.eu/" target="_blank"><img src="images/contents/rhenatic.png" alt="Rhénatic" style="width: 180px;"></a>
+						<a href="http://www.strataggem.com/" target="_blank" style="background: white; padding: 8px;"><img src="images/contents/strataggem.png" alt="Strataggem"></a>
+						<a href="http://www.insa-strasbourg.fr/" target="_blank"><img src="images/contents/insa.png" alt="INSA Strasbourg"></a>
+						<a href="https://www.orange.fr/" target="_blank"><img src="images/contents/orange.png" alt="orange"></a>
+						<!--<a href="http://www.alsacechampagneardennelorraine.eu/" target="_blank"><img src="images/contents/regiongrandest.png" alt="Région Grand Est"></a>
+						<a href="https://www.interregeurope.eu/" target="_blank"><img src="images/contents/interreg.jpg" alt="Interreg Europe"></a>-->
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
 						<h3 style="font-size: 17px;">Bronze Sponsors</h3><br>
-						<a href="http://scalingo.com" target="_blank"><img width="220" src="/images/contents/scalingo.svg" alt="Scalingo"></a>
-						<a href="https://its-future.com/" target="_blank"><img src="/images/contents/its.png" alt="its future"></a>
-						<a href="http://www.agoracalyce.com/" target="_blank"><img src="/images/contents/agora.png" alt="Agora Calycé"></a>
-						<a href="https://www.thurmelec.fr/" target="_blank"><img src="/images/contents/thurmelec.jpg" alt="thurmelec"></a>
-
+						<a href="http://scalingo.com" target="_blank"><img width="220" src="images/contents/scalingo.svg" alt="Scalingo"></a>
+						<a href="https://its-future.com/" target="_blank"><img src="images/contents/its.png" alt="its future"></a>
+						<a href="http://www.agoracalyce.com/" target="_blank"><img src="images/contents/agora.png" alt="Agora Calycé"></a>
+						<a href="https://www.thurmelec.fr/" target="_blank"><img src="images/contents/thurmelec.jpg" alt="thurmelec"></a>
+						<a href="https://fr.rs-online.com/web/" target="_blank"><img src="images/contents/rs.png" alt="rs"></a>
+						<a href="http://technologyandstrategy.group/" target="_blank"><img src="images/contents/ts.jpg" alt="ts"></a>
+						<a href="https://www.soprasteria.com/" target="_blank"><img src="images/contents/sopra.jpg" alt="sopra steria"></a>
+						<a href="https://www.fr.sogeti.com/" target="_blank"><img src="images/contents/sogeti.jpg" alt="sogeti"></a>
 					</div>
 					
 					<div class="sponsors-row" data-animation="bounceIn">
-						<h3 style="font-size: 17px;">Ces entreprises / associations / institutions soutiennent l'événement</h3><br>
-						<a href="http://www.alsacetech.org/" target="_blank"><img src="/images/contents/alsacetech.jpg" alt="Alsace Tech" style="width: 220px;"></a>
-						<a href="http://www.creaccro.eu/" target="_blank"><img src="/images/contents/accro.jpg" alt="Accro"></a>
-						<a href="http://alsace.com/" target="_blank"><img src="/images/contents/aaa.jpg" alt="Agence Attractivité Alsace"></a>
-						<a href="http://lafab.org" target="_blank"><img src="/images/contents/lafabrique.jpg" alt="La Fabrique"></a>
-						<a href="http://www.lafrenchtech-alsace.eu/" target="_blank"><img style="height: 150px;" src="/images/contents/fta2.png" alt="La French Tech Alsace"></a>
-						<a href="http://alsace.cci.fr/" target="_blank"><img src="/images/contents/ccialsace.jpg" alt="CCI Alsace"></a>
-						<a href="http://adira.com/" target="_blank"><img src="/images/contents/adira.png" alt="Adira"></a>
-						<a href="http://www.alsaceinnovation.eu/" target="_blank"><img src="/images/contents/alsaceinnovation.png" alt="Adira"></a>
-						<a href="http://maddyness.com/" target="_blank"><img src="/images/contents/maddyness.jpg" alt="Maddyness"></a>
-						<a href="http://www.xfive.be/" target="_blank"><img src="/images/contents/xfive.jpg" alt="XFive"></a>
-						<a href="http://cpc-analytics.fr" target="_blank"><img src="/images/contents/cpc-analytics.jpg" alt="Cpc Analytics"></a>
-						<a href="http://duipi.unistra.fr/" target="_blank"><img src="/images/contents/ipi.png" alt="IPI"></a>
-						<a href="http://innovationweek.org/france/" target="_blank"><img src="/images/contents/innoweek.png" alt="Innoweek"></a>
-						<a href="http://marque.alsace/" target="_blank"><img src="/images/contents/acoeur.png" alt="Marque Alsace"></a>
-						<a href="http://www.strasbourgaimesesetudiants.eu/" target="_blank"><img src="/images/contents/strasbourg-etudiants.png" alt="Strasbourg aime ses étudiants"></a>
-						<a href="http://alsacalcul.unistra.fr/" target="_blank"><img src="/images/contents/alsacalcul.jpg" alt="Alsa Calcul"></a>
-						<a href="http://www.conectus.fr/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="/images/contents/satt.png" alt="satt connectus"></a>
-						<a href="https://www.federation-industries-alsace.com/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="/images/contents/fia.png" alt="fia"></a>
-						<a href="http://prglobalmedia.com/" target="_blank" style="background: white; padding: 0 5px;"><img src="/images/contents/prglobalmedia.png" alt="PR Global Media"></a>
-						<a href="http://http://epitech.eu/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="/images/contents/epitech.png" alt="Epitech"></a>
-						<a href="http://www.reck.fr/" target="_blank"><img src="/images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>
+						<h3 style="font-size: 17px;">They support Hacking Industry Camp</h3><br>
+						<a href="http://www.alsacetech.org/" target="_blank"><img src="images/contents/alsacetech.jpg" alt="Alsace Tech" style="width: 220px;"></a>
+						<a href="http://www.creaccro.eu/" target="_blank"><img src="images/contents/accro.jpg" alt="Accro"></a>
+						<a href="http://alsace.com/" target="_blank"><img src="images/contents/aaa.jpg" alt="Agence Attractivité Alsace"></a>
+						<a href="http://lafab.org" target="_blank"><img src="images/contents/lafabrique.jpg" alt="La Fabrique"></a>
+						<a href="http://www.lafrenchtech-alsace.eu/" target="_blank"><img style="height: 150px;" src="images/contents/fta2.png" alt="La French Tech Alsace"></a>
+						<a href="http://alsace.cci.fr/" target="_blank"><img src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a>
+						<a href="http://adira.com/" target="_blank"><img src="images/contents/adira.png" alt="Adira"></a>
+						<a href="https://www.grandenov.fr/" target="_blank"><img src="images/contents/grandenov.png" style="background: white;" alt="Grand E-nov"></a>
+						<a href="http://maddyness.com/" target="_blank"><img src="images/contents/maddyness.jpg" alt="Maddyness"></a>
+						<a href="http://www.xfive.be/" target="_blank"><img src="images/contents/xfive.jpg" alt="XFive"></a>
+						<a href="http://cpc-analytics.fr" target="_blank"><img src="images/contents/cpc-analytics.jpg" alt="Cpc Analytics"></a>
+						<a href="http://duipi.unistra.fr/" target="_blank"><img src="images/contents/ipi.png" alt="IPI"></a>
+						<!--<a href="http://innovationweek.org/france/" target="_blank"><img src="images/contents/innoweek.png" alt="Innoweek"></a>-->
+						<a href="http://marque.alsace/" target="_blank"><img src="images/contents/acoeur.png" alt="Marque Alsace"></a>
+						<a href="http://www.strasbourgaimesesetudiants.eu/" target="_blank"><img src="images/contents/strasbourg-etudiants.png" alt="Strasbourg aime ses étudiants"></a>
+						<a href="http://alsacalcul.unistra.fr/" target="_blank"><img src="images/contents/alsacalcul.jpg" alt="Alsa Calcul"></a>
+						<a href="http://www.conectus.fr/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/satt.png" alt="satt connectus"></a>
+						<!--<a href="https://www.federation-industries-alsace.com/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/fia.png" alt="fia"></a>
+						<a href="http://prglobalmedia.com/" target="_blank" style="background: white; padding: 0 5px;"><img src="images/contents/prglobalmedia.png" alt="PR Global Media"></a>-->
+						<a href="http://http://epitech.eu/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/epitech.png" alt="Epitech"></a>
+						<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>
+						<a href="https://sciencemeup.com/" target="_blank"><img src="images/contents/sciencemeup.png" alt="Science Me Up"></a>
+						<a href="https://www.eifer.kit.edu/" target="_blank"><img src="images/contents/eifer.png" style="background: #fff" alt="Eifer"></a>
+						<a href="https://www.edf.fr/" target="_blank"><img src="images/contents/edf.png" alt="EDF"></a>
 					</div>
 
-					<div class="sponsors-row" data-animation="bounceIn">
+					<!--<div class="sponsors-row" data-animation="bounceIn">
 						<h3 style="font-size: 17px;"></h3><br>
 						<div class="row">
 							<p>Intéressés pour devenir sponsor ?</p>
 
 							<a target="_blank" href="https://drive.google.com/open?id=0B0S2y3rk51DNRnJrRGNRV1h1OUU" class="btn btn-primary">Présentation HIC</a> &nbsp; <a target="_blank" href="https://drive.google.com/open?id=0B0S2y3rk51DNQnJuZldfaFdHMlU" class="btn btn-primary">Devenir sponsor</a>
 						</div>
-					</div>
+					</div>-->
 
 				</div>
-			</section>-->
+			</section>
 
 			<!-- FAQ
 			================================= -->
